[package]
name = "erc-cli"
version = "0.1.0"
authors = ["nwa"]
description = """
test
"""
homepage = "https://github.com/subnwa/erc-cli"
repository = "https://github.com/subnwa/erc-cli"
documentation = "https://docs.rs/grex"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
categories = ["command-line-utilities", "parsing"]
keywords = ["pattern", "regex", "regexp"]


[dependencies]
deserr = "0.6.0"
snafu = "0.7.5"
pgfine = "2.3.0"
r2d2 = "0.8.10"
