[package]
name = "erc-cli"
version = "0.1.0"
authors = ["nwa"]
description = """
test
"""
homepage = "https://github.com/subnwa/erc-cli"
repository = "https://github.com/subnwa/erc-cli"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
categories = ["command-line-utilities", "parsing"]
keywords = ["pattern", "regex", "regexp"]



[dependencies]
bootloader = "0.9.8"
