[package]
name = "erc-cli"
version = "0.1.0"
authors = ["nwa"]
description = """
test
"""
homepage = "https://github.com/subnwa/erc-cli"
repository = "https://github.com/subnwa/erc-cli"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
categories = ["command-line-utilities", "parsing"]
keywords = ["pattern", "regex", "regexp"]



[dependencies]
bootloader = "0.9.8"
rustix = "0.38.10"
env_logger = "0.10.0"
fs_extra = "1.3.0"
log = "0.4.19"
notify = "6.0.1"
toml = "0.7.6"
